fix overflow-y

--- a/src/app/components/component/navbar-panel-message/navbar-panel-message.component.scss
+++ b/src/app/components/component/navbar-panel-message/navbar-panel-message.component.scss
@@ -15,7 +15,6 @@
 .container__elements--column {
   display: flex;
   flex-direction: column;
-  overflow-y: auto;
 }
 .container__element--spacebetween {
   justify-content: space-between;
