--- a/src/app/components/wrapper/navbar/navbar.component.scss
+++ b/src/app/components/wrapper/navbar/navbar.component.scss
@@ -12,3 +12,7 @@ main{
     bottom: 2rem;
     z-index: 5;
   }
+  article{
+    height: 90%;
+    overflow-y: auto;
+  }
